--- a/index.css
+++ b/index.css
@@ -29,46 +29,28 @@ header {
     background-color: #ddd;
   }
   
-  .boton-buscar {
-    width: 30px;
-    height: 20px;
-    background-color: #555;
-  }
   
 
 .search-bar {
   width: 300px;
-  height: 40px;
+  height: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #6d2d2d;
+  background-color: #ffffff;
   margin: 0 auto;
 }
 
 
-.search-bar2 {
-    width: 150px;
-    height: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #fff;
-    margin: 0 auto;
-    border: 1px solid #000; 
-}
 
 .menu-links {
+    width: 80px;
+    height: 10px;
+    background-color: #fcfcfc;
     display: flex;
     justify-content: space-around;
     padding: 15px 0;
-    background-color: #fff;
-}
-
-.menu-links div {
-    width: 80px;
-    height: 10px;
-    background-color: #ccc;
+    background-color: #ff0000;
 }
 
 .destacado {
